<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".activity.AddManagerActivity">

    <ScrollView
        android:layout_above="@+id/relRegistration"
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/heading_enter_manager_details"
                    android:textColor="@color/primary_text"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    app:cardElevation="3dp"
                    app:strokeColor="@color/divider"
                    app:strokeWidth="0.1dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:background="@drawable/ic_user"
                            android:backgroundTint="@color/color_two" />

                        <EditText
                            android:id="@+id/txtName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="10dp"
                            android:background="@color/transparent"
                            android:hint="@string/enter_full_name"
                            android:inputType="textPersonName"
                            android:textColor="@color/primary_text"
                            android:textSize="14sp" />
                    </LinearLayout>


                </com.google.android.material.card.MaterialCardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_weight="2"
                        app:cardElevation="3dp"
                        app:strokeColor="@color/divider"
                        app:strokeWidth="0.1dp"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp">

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:background="@android:drawable/ic_menu_call"
                                android:backgroundTint="@color/color_two" />

                            <EditText
                                android:id="@+id/txtMobile"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginLeft="10dp"
                                android:background="@color/transparent"
                                android:hint="@string/enter_mobile"
                                android:inputType="phone"
                                android:digits="0123456789"
                                android:textColor="@color/primary_text"
                                android:textSize="14sp" />
                        </LinearLayout>


                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        app:cardElevation="3dp"
                        app:strokeColor="@color/divider"
                        app:strokeWidth="0.1dp"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp">

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:background="@android:drawable/ic_dialog_email"
                                android:backgroundTint="@color/color_two" />

                            <EditText
                                android:id="@+id/txtEmail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginLeft="10dp"
                                android:background="@color/transparent"
                                android:hint="@string/enter_email"
                                android:inputType="textEmailAddress"
                                android:textColor="@color/primary_text"
                                android:textSize="14sp" />
                        </LinearLayout>


                    </com.google.android.material.card.MaterialCardView>
                </LinearLayout>


                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    app:cardElevation="3dp"
                    app:strokeColor="@color/divider"
                    app:strokeWidth="0.1dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:background="@drawable/ic_company"
                            android:backgroundTint="@color/color_two" />

                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="10dp"
                            android:background="@color/transparent"
                            android:hint="@string/enter_company"
                            android:inputType="textPersonName"
                            android:textColor="@color/primary_text"
                            android:textSize="14sp" />
                    </LinearLayout>


                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    app:cardElevation="3dp"
                    app:strokeColor="@color/divider"
                    app:strokeWidth="0.1dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:background="@drawable/ic_attachment_pin"
                            android:backgroundTint="@color/color_two" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="10dp"
                            android:background="@color/transparent"
                            android:text="@string/aadhaar_attachment"
                            android:textColor="@color/primary_text"
                            android:textSize="14sp" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:id="@+id/relRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/btnRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:backgroundTint="@color/color_two"
            android:padding="10dp"
            android:text="@string/ADD"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>


</RelativeLayout>